Add more css code

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <title>Beetroot</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
 </head>
 <body>
 
   <header>
-    <h1>Beetroot (Beta Vulgaris)</h1>
+    <h1>Beetroot (<i>Beta Vulgaris</i>)</h1>
     <nav>
       <ol>
         <li><a href="#">Common varieties</a></li>
@@ -23,12 +24,14 @@
   <main>
     <figure>
       <img src="images/beets.jpg">
-      <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+      <figcaption class="cap">A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
-    <p>55 to 65 days are needed from germination to harvest of the root.</p>
+    <p class="days">55 to 65 days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or comfined with any salad vegetable.</p>
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i></q>.</p>
-    <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.- <cite>Chris Pratt</cite></blockquote>
+    <blockquote class="pratt">I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.
+      <p><cite>- Chris Pratt</cite></p>
+    </blockquote>
 
     <h2>Common varieties</h2>
     <ol>
