--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif:400" rel="stylesheet">
 </head>
 <body>
 
@@ -30,11 +30,11 @@
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or comfined with any salad vegetable.</p>
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i></q>.</p>
     <blockquote class="pratt">I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.
-      <p><cite>- Chris Pratt</cite></p>
+      <br><cite class="chris">- Chris Pratt</cite>
     </blockquote>
 
     <h2>Common varieties</h2>
-    <ol>
+    <ol class="common">
       <li>Albino</li>
       <li>Bull's Blood</li>
       <li>Chioggia</li>
@@ -43,7 +43,7 @@
     </ol>
 
     <h2>Nutritional information</h2>
-    <p>Serving size: <data value="100">100g</data></p>
+    <p class="size">Serving size: <data value="100">100g</data></p>
     <dl>
       <dt>Energy:</dt>
       <dd><data value="180">180kJ</data></dd>
